<resources>
    <string name="app_name">ClosetVirtual</string>
    <string name="closet_virtual">CLOSET\nVIRTUAL</string>
    <string name="incio">INICIO DE SESION</string>
    <string name="usaurio">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="nocuenta">NO TIENES CUENTA?</string>
    <string name="login">Login</string>
    <string name="registrar">REGISTRAR</string>
    <string name="nombres">Nombre(s)</string>
    <string name="apellidos">Apellido(s)</string>
    <string name="eMail">E-Mail</string>
    <string name="confirmarContraseña">Confirmar Contraseña</string>
    <string name="registrarPrenda"><u>REGISTRA UNA NUEVA PRENDA</u></string>
    <string name="email_o_usuario">Email/Usuario</string>
    <string-array name="categorias_array">
        <item>TOP</item>
        <item>BOTTOM</item>
        <item>ZAPATOS</item>
        <item>BODYSUIT</item>
        <item>ACCESORIOS</item>
    </string-array>
</resources>